# university

./: README.md
2020-fall/computer-architecture/: README.md
2021-fall/operating-systems/: README.md
2021-spring/programming-software-systems-2/: README.md
2022-fall/distributed-network-programming/: README.md
2022-fall/introduction-to-machine-learning/: README.md
2022-fall/programming-paradigms/: README.md
2022-fall/systems-and-network-adminstration/: README.md
2022-spring/databases/: README.md
2023-spring/advanced-compiler-construction-and-program-analysis/: README.md
2023-spring/compiler-construction/: README.md
2023-spring/distributed-systems/: README.md
2023-spring/front-end-web-development/: README.md
2023-spring/information-retrieval/: README.md
2023-spring/lean-software-development/: README.md
databases/Homework/: Mosab_Mohamed.sql
distributed-systems/Project/: Distributed Systems - Report - Menna  Mosab.docx
foriegn-language-1/: README.md
introducetion-to-career-development-for-IT-specialists/Materials/: Narrative.xlsx
physics-2/: README.md
programming-software-systems-2/Homeworks/Homework3/: CMakeLists.txt  Cabinet.cpp  Cabinet.h  ConferenceRoom.h  DirectorCabinet.cpp  DirectorCabinet.h  Guest.cpp  Guest.h  LabEmployee.h  Professor.h  RoomType.h  Student.h  Usertype.h
programming-software-systems-2/Homeworks/Homework4/: CMakeLists.txt  Controller.cpp  Controller.h  OrderQuery.cpp
programming-software-systems-2/Homeworks/Homework4/CarType/: Business.h  Car.cpp  Car.h  ComfortPlus.cpp  ComfortPlus.h  Economy.cpp
(+379 files in other folders)
