cmake_minimum_required(VERSION 3.17)
project(PSSII_Homework2)

set(CMAKE_CXX_STANDARD 14)

add_executable(PSSII_Homework2 main.cpp Usertype.cpp Usertype.h Professor.cpp Professor.h Student.cpp Student.h LabEmployee.cpp LabEmployee.h Director.cpp Director.h ClassRoom.cpp ClassRoom.h LectureHall.cpp LectureHall.h ConferenceRoom.cpp ConferenceRoom.h Admin.cpp Admin.h RoomType.cpp RoomType.h Cabinet.cpp Cabinet.h DirectorCabinet.cpp DirectorCabinet.h Guest.cpp Guest.h)